# crunchlang

./: .editorconfig  crunch.opam  crunchlib.opam  dune-project
lib/: ast.ml  control_flow.ml  driver.ml  dune  lexer.mll  parser.mly  type.ml
lib/ast/: ast.ml  ast.mli  ast_intf.ml
lib/codegen/: codegen.ml  codegen.mli  codegen_intf.ml
lib/codegen/codegen_env/: module_codegen_env.mli  module_codegen_env_intf.ml
lib/control_flow/: control_flow.ml  control_flow.mli  control_flow_intf.ml
lib/llvm/: LLVM.ml
lib/module/: module.ml  module.mli  module_intf.ml
lib/module/codegen_env/: module_codegen_env.ml  module_codegen_env.mli  module_codegen_env_intf.ml
lib/purity/: purity.ml  purity.mli  purity_intf.ml
lib/purity/env/: purity_env.ml  purity_env.mli  purity_env_intf.ml
lib/purity/inference/: purity_inference.ml  purity_inference.mli  purity_inference_intf.ml
lib/semantic/: semantic.ml  semantic.mli  semantic_analysis.ml  semantic_analysis.mli  semantic_env.ml  semantic_env.mli  semantic_tests.ml
lib/srcloc/: srcloc.ml  srcloc.mli  srcloc_intf.ml
lib/tests/: codegen_tests.ml  module_tests.ml  parser_tests.ml  semantic_tests.ml
lib/type/: type.ml  type.mli
