(include_subdirs unqualified)

(library
 (public_name crunch)
 (libraries core_kernel menhirLib llvm llvm.target llvm.all_backends)
 (inline_tests)
 (flags :standard -open Core_kernel)
 (preprocess (pps ppx_jane))
 (private_modules LLVM codegen_tests parser_tests))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags :standard --table --explain)
 (infer true))
