(include_subdirs unqualified)

(library
 (public_name crunch)
 (libraries core_kernel menhirLib llvm llvm.analysis llvm.target llvm.all_backends)
 (inline_tests)
 (flags :standard -open Core_kernel)
 (preprocess (pps ppx_jane))
 (private_modules
  LLVM
  parser_tests semantic_tests))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags :standard --table --explain)
 (infer true))
