(include_subdirs unqualified)

(library
 (public_name crunch)
 (libraries core menhirLib llvm llvm.analysis llvm.target llvm.all_backends)
 (inline_tests)
 (flags :standard -open Core)
 (preprocess (pps ppx_jane))
 (private_modules LLVM semantic_tests))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags :standard --table --explain)
 (infer true))
